# fibo_mobilerobot

./: 6629_README.md  BUILD_SUMMARY.md  CODE_SUMMARY.md  DELIVERABLES.md  PROJECT_INDEX.md  README.md  README_BUILD.md  ROS2_LEARNING_GUIDE.md  VISUALIZATION_GUIDE.md  analyze_trajectories.py  check_lab_status.py  frames_2026-02-08_21.43.44.gv  imu_preprocessor.py  launch_rviz.sh  mapper_debug.py  odom_ekf_data.csv  odom_slam_(truth)_data_seq1.csv  odom_wheel_(part3)_data.csv  odom_wheel_(part3)_data_seq2.csv  odom_wheel_data.csv  plot.ipynb  qos_overrides.yaml  requirement.txt  ros2bag_to_csv.py  run_slam.sh  ta_README.md
config/: ekf_odom_viz_clean.rviz  icp_mapping_viz.rviz  icp_odom_viz.rviz  lab1_odometry.rviz  lab1_slam.rviz  slam_viz.rviz  wheel_odom_viz.rviz
data/: odom_ekf_data_seq1.csv  odom_ekf_data_seq2.csv  odom_icp_data.csv  odom_icp_data_seq1.csv  odom_icp_data_seq2.csv  odom_slam_(truth)_data.csv  odom_slam_(truth)_data_seq2.csv  (+1 more)
src/: plot.py
src/fra532_lab1_part1/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/fra532_lab1_part1/config/: ekf_params.yaml
src/fra532_lab1_part1/fra532_lab1_part1/: __init__.py  ekf_odometry copy.py  ekf_odometry.py  simple_wheel_odometry.py  trajectory_logger.py  wheel_odometry.py
src/fra532_lab1_part1/launch/: ekf_odometry.launch.py  odometry.launch.py  simple_wheel_odometry.launch.py  wheel_odom_with_rviz.launch.py
src/fra532_lab1_part3/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/fra532_lab1_part3/config/: slam_params.yaml  slam_toolbox_params.yaml
src/fra532_lab1_part3/fra532_lab1_part3/: map_saver.py  slam_evaluator.py  wheel_odometry.py
src/fra532_lab1_part3/launch/: rviz.launch.py  slam.launch.py  slam_toolbox.launch.py  slam_with_rviz.launch.py
(+88 files in other folders)
