<?xml version="1.0"?>
<package format="3">
  <name>fra532_lab1_part1</name>
  <version>1.0.0</version>
  <description>FRA532 Lab1 Part1: EKF Odometry Fusion - Wheel Odometry and Extended Kalman Filter for pose estimation</description>

  <maintainer email="student@example.com">Lab Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>